# Wenche

./: .env.example  .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml
docs/: bruk.md  index.md  installasjon.md  oppsett.md
wenche/: __init__.py  aarsregnskap.py  aksjonaerregister.py  altinn_client.py  auth.py  cli.py  models.py  skattemelding.py  ui.py  xbrl.py
