[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wenche"
version = "0.1.0"
description = "Enkel innsending av årsregnskap, skattemelding og aksjonærregisteroppgave til Altinn for holdingselskaper"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "authlib>=1.3",
]

[project.scripts]
wenche = "wenche.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["wenche"]
